--- a/Physics_Emissions_Data.ipynb
+++ b/Physics_Emissions_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,37 @@
     "Blackett_heating_data = pd.read_excel(Data_file_path, sheet_name= 'BLKT(h)')\n",
     "Blackett_electricity_data = pd.read_excel(Data_file_path, sheet_name= 'BLKT(e)')\n",
     "Huxley_heating_data = pd.read_excel(Data_file_path, sheet_name= 'HXLY(h)')\n",
-    "HUxley_electricity_data = pd.read_excel(Data_file_path, sheet_name= 'HXLY(e)')\n"
+    "Huxley_electricity_data = pd.read_excel(Data_file_path, sheet_name= 'HXLY(e)')\n",
+    "\n",
+    "#Making the first row of the data frame into the labels:\n",
+    "\n",
+    "\n",
+    "def set_first_row_as_labels(df):\n",
+    "    # Extract the first row as the labels\n",
+    "    labels = df.iloc[0]\n",
+    "    # Set the labels as the new index\n",
+    "    df = df[1:]\n",
+    "    df.columns = labels\n",
+    "    df = df.drop(['Site Group', 'Site', 'Monitoring Point', 'Type', 'Unit of Measurement', 'Date'], axis = 1)\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "Blackett_heating_data = set_first_row_as_labels(Blackett_heating_data)\n",
+    "Blackett_electricity_data = set_first_row_as_labels(Blackett_electricity_data)\n",
+    "Huxley_heating_data = set_first_row_as_labels(Huxley_heating_data)\n",
+    "Huxley_electricity_data = set_first_row_as_labels(Huxley_electricity_data) \n",
+    "\n",
+    "Blackett_heating_data = set_first_row_as_labels(Blackett_heating_data)\n",
+    "Blackett_electricity_data = set_first_row_as_labels(Blackett_electricity_data)\n",
+    "Huxley_heating_data = set_first_row_as_labels(Huxley_heating_data)\n",
+    "Huxley_electricity_data = set_first_row_as_labels(Huxley_electricity_data) \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -34,25 +64,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Filtering the data\n",
-    "#I will initially just plot every value of data in the data frame and examine the outliers\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\feher\\AppData\\Local\\Temp/ipykernel_30848/1178581762.py:3: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
-      "  B_h_d_daily_sum = Blackett_heating_data.sum(axis = 1)\n"
-     ]
-    }
-   ],
    "source": [
     "#Initially, I will add the values of energy consumed in a whole day, and examine how this varies during the year\n",
     "\n",
